# timeoutcontext

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  justfile  pyproject.toml  requirements_dev.txt  setup.py  tox.ini
.github/workflows/: test.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst  timeoutcontext.rst
src/timeoutcontext/: __init__.py  _timeout.py
tests/: __init__.py  base_test_case.py  test_default_timeout.py  test_signal_timeout.py  test_thread_timeout.py  test_timeout.py
timeoutcontext/: __init__.py  _timeout.py  default_timeout.py  signal_timeout.py  thread_timeout.py
